--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,13 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  font-size: 3vw;
+}
+
+.correct {
+  color: green;
+}
+
+.wrong {
+  color: #660000;
 }
