--- a/src/Containers/Intervals/style.css
+++ b/src/Containers/Intervals/style.css
@@ -4,6 +4,6 @@
   justify-content: space-around;
   align-items: center;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   background-color: lightgray;
 }
