--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  font-size: 5vw;
+  overflow-x: hidden;
 }
 
 .correct {
@@ -11,4 +11,102 @@ body {
 
 .wrong {
   color: #660000;
+}
+
+#mainContainer {
+  display: block;
+}
+
+#leftPanel {
+  background-color: grey;
+}
+
+#rightPanel {
+  background-color: grey;
+}
+
+#leftPanel,
+#rightPanel {
+  position: absolute;
+  width: 50vw;
+  min-height: 100vh;
+
+  /*
+    This is a trick to improve performance on newer versions of Chrome
+    #perfmatters
+  */
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+
+  -webkit-transition: -webkit-transform 0.4s ease-out;
+  transition: transform 0.4s ease-out;
+
+  z-index: 1;
+}
+
+#leftPanel {
+  /*
+  Using translate3d as a trick to improve performance on older versions of Chrome
+  See: http://aerotwist.com/blog/on-translate3d-and-layer-creation-hacks/
+  #perfmatters
+  */
+  -webkit-transform: translate(-50vw, 0);
+  transform: translate(-50vw, 0);
+}
+
+#mainPanel {
+  width: 100%;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#rightPanel {
+  left: 100%;
+}
+
+#leftPanel.open {
+  -webkit-transform: translate(0, 0);
+  transform: translate(0, 0);
+}
+
+#rightPanel.open {
+  -webkit-transform: translate(-50vw, 0);
+  transform: translate(-50vw, 0);
+}
+
+@media (min-width: 500px) {
+  /* If the screen is wider then 500px, use Flexbox */
+  #mainContainer {
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-flow: row nowrap;
+    flex-flow: row nowrap;
+  }
+  #leftPanel {
+    position: relative;
+    -webkit-transition: none 0s ease-out;
+    transition: none 0s ease-out;
+    -webkit-transform: translate(0, 0);
+    transform: translate(0, 0);
+  }
+  #mainPanel {
+    position: static;
+  }
+}
+
+@media (min-width: 800px) {
+  body {
+    overflow-x: auto;
+  }
+  #rightPanel {
+    position: relative;
+    left: auto;
+    -webkit-transition: none 0s ease-out;
+    transition: none 0s ease-out;
+    -webkit-transform: translate(0, 0);
+    transform: translate(0, 0);
+  }
 }
