--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,9 @@ body {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
+  overflow-y: scroll;
+  height: calc(100vh - 80px);
+  padding: 60px 0 20px 0;
 }
 
 #leftPanel {
